--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "backbone": "^1.3.3",
     "jquery": "^2.2.4",
     "lodash": "^3.10.1",
+    "pushstate-server": "^3.1.0",
     "react": "^16",
     "react-dom": "^16",
     "react-redux": "^5.0.2",
@@ -20,6 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js"
   }
 }
