--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.0",
+    "react-scripts": "^5.0.0",
     "redux-devtools": "^3.3.2"
   },
   "dependencies": {
     "backbone": "^1.3.3",
+    "bootstrap": "^5.1.3",
     "jquery": "^2.2.4",
     "lodash": "^3.10.1",
     "pushstate-server": "^3.1.0",
     "react": "^16",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^16",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "sass": "^1.49.9",
     "styled-components": "^5.3.3"
   },
   "scripts": {
@@ -23,5 +26,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "node server.js"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
