--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "^16",
     "react-redux": "^5.0.2",
+    "react-router-dom": "^6.2.2",
     "redux": "^3.6.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3"
